tdf#142494 Word count set to 0 when no words are selected.

The application now correctly recognises selections without words.
When a selection is made that does not contain a word, the word count is
set to zero, and the text "Selected: 0 words, x chars" now appears

Change-Id: Icfa0a6fe2bf6315485102d6ad9b3cea5b6d8d139
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161509
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>